# ai-novel-character-graph

./: .gitignore  README.md  cleanup_logs.sh  docker-compose.v2.yml  docker-compose.yml
docs/: ARCHITECTURE_V2.md
infrastructure/postgres/: init.sql
server/: Dockerfile  config.yaml  package.json
server/scripts/: benchmark.ts
server/src/: app.ts
server/src/config/: index.ts
server/src/prompts/: chapter-split.prompt.ts  character-disambiguate.prompt.ts  detect-protagonist.prompt.ts  duplicate-check.prompt.ts  extract-characters.prompt.ts  extract-events.prompt.ts  extract-relations.prompt.ts  infer.prompt.ts  profile-update.prompt.ts  semantic-segment.prompt.ts
server/src/routes/: character-chat.route.ts  character.route.ts  continue.route.ts  export.route.ts  graph.route.ts  graphrag.route.ts  index.ts  knowledge-base.route.ts  novel.route.ts  prompt-preset.route.ts  settings.route.ts  snapshot.route.ts  task.route.ts
services/ai-service/: .env.example  Dockerfile  pyproject.toml
services/ai-service/app/: main.py
services/ai-service/app/api/: chat.py  embedding.py  extract.py  graphrag.py  health.py
services/ai-service/app/core/: ai_client.py  chat.py  config.py  embedding.py  exceptions.py  extractor.py  graphrag.py  prompts.py  reranker.py
services/ai-service/app/models/: database.py  schemas.py
services/api-gateway/: .env.example  Dockerfile  go.mod  go.sum
turbovec-service/: Dockerfile  main.py  requirements.txt
web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+109 files in other folders)
