[project]
name = "ai-service"
version = "0.1.0"
description = "小说角色图谱 AI 服务层"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.2.0",
    "neo4j>=5.25.0",
    "sentence-transformers>=3.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.12.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
